--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,17 @@ body {
 }
 
 .container {
-    min-width: 80%;
-    max-width: 80%;
-
-    min-height: 50%;
-    max-height: 50%;
 
     display: flex;
-    flex-wrap: wrap;
-    flex: 1 1 auto;
-    justify-content: center;
+    flex: 0 0 auto;
+    
+}
+
+
+.grid-style {
+    margin:1px;
+    height: 10px;
+    width: 10px;
+    background-color: white;
+
 }
